k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-hello
  namespace: bkable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-hello
  template:
    metadata:
      labels:
        app: echo-hello
    spec:
      securityContext:
        allowPrivilegeEscalation: false
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: echo-hello
          image: ghcr.io/spinguard/echo-hello:0.0.1 # {"$imagepolicy": "flux-system:echo-hello"}
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /echo-hello
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
